src/components/votesPreview/votesPreview.css
@import '../app/variables.css';

:root {
  --danger-color: var(--color-error);
  --link-color: #0077bd;
  --header-font-size: 28px;
  --link-font-size: 15px;
  --progress-bar-text-font-size: 13px;
  --progress-bar-header-font-size: 54px;
}

.wrapper {
  display: flex;
  flex-flow: column wrap;
  justify-content: space-between;
  width: 100%;
  overflow-y: hidden;
  box-sizing: border-box;
  height: 100%;

  & header {
    width: 100%;
    margin-left: 30px;
    margin-top: 40px;

    & h3 {
      font-size: var(--header-font-size);
      margin: 0;
    }

    & a {
      font-size: var(--link-font-size);
      color: var(--link-color);
      margin-top: 16px;
      display: block;
      font-weight: 600;
      text-decoration: none;
    }
  }
}

.button {
  margin: 0 51px 76px;
}

.progressWrapper {
  text-align: center;
  width: 100%;
  font-family: var(--heading-font);
  position: relative;
  margin-bottom: 40px;

  &.red {
    & h4 {
      color: var(--danger-color);
    }

    & :global .CircularProgressbar {
      & :global .CircularProgressbar-path {
        stroke: url('#danger') !important;
      }
    }
  }

  & article {
    font-size: var(--progress-bar-text-font-size);
    position: absolute;
    z-index: 1;
    text-align: center;
    width: 100%;
    top: 30px;
    letter-spacing: 1px;

    &.totalWrapper {
      margin-bottom: 0;
    }

    & h4 {
      font-size: var(--progress-bar-header-font-size);
      line-height: var(--progress-bar-header-font-size);
      margin: 6px 0px;
    }
  }

  & :global .CircularProgressbar {
    width: 152px;

    & :global .CircularProgressbar-path {
      stroke: url('#grad');
    }

    & :global .CircularProgressbar-trail {
      stroke: #3c5068;
    }

    & :global .CircularProgressbar-text {
      font-size: 54px;
    }
  }
}

@media (min-height: 1000px) {
  .progressWrapper {
    & :global .CircularProgressbar {
      width: 200px;
    }

    & article {
      top: 42px;

      & h4 {
        margin: 15px 0px;
      }
    }
  }
}

